# chicken_door

./: .gitignore  Cargo.toml  Dockerfile  build_for_linux.sh  docker-compose.yaml
files/: schedule.json  status.json
src/: chicken_door  config.rs  door.rs  main.rs  routes.rs  sun.rs
