[package]
name = "chicken_server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version="0.8.1", features=["json", "macros"] }
chrono = { version="0.4.39" }
openssl = { version="0.10.68", features=["vendored"] }
serde = { version="1.0.217", features=["derive"] }
serde_json = { version="1.0.135" }
tokio = { version="1.43.0", features=["full"] }
toml = { version="0.8.19" }
tower-http = { version="0.6.2", features=["cors"] }
tracing = { version="0.1.41" }
tracing-appender = { version="0.2.3" }
tracing-log = { version="0.2.0" }
tracing-subscriber = { version="0.3.19", features=["ansi", "fmt"] }
